prettify the page

--- a/src/index.html
+++ b/src/index.html
@@ -22,47 +22,51 @@
 
   <!-- Container with light background -->
   <div class="container bg-light">
-    <h1>
-      Graph generator
-    </h1>
-    <p>
-      Internally, uses DOT-strings, Elm, and API of quickchart.io
-    </p>
+    <div style="margin-top: 50px;">
+      <h1>
+        Graph generator
+      </h1>
+      <p>
+        Internally, uses DOT-strings, Elm, and API of quickchart.io
+      </p>
+    </div>
   </div>
 
   <div class="container">
-    <h5>Notes</h5>
-    <ul>
-      <li>Please, provide <b>alphanumeric</b> values</li>
-      <li>Non-existing vertices will be added automatically</li>
-      <li>Press on the corresponding button to insert or remove an edge</li>
-      <li>Vertices in graph should be named uniquely
-    </ul>
+    <div style="margin-top: 50px;">
+      <h5>Notes</h5>
+      <ul>
+        <li>Please, provide <b>alphanumeric</b> values</li>
+        <li>Non-existing vertices will be added automatically</li>
+        <li>Press on the corresponding button to insert or remove an edge</li>
+        <li>Vertices in graph should be named uniquely
+      </ul>
+    </div>
 
     <div style="margin-top: 50px;" class="col-sm">
       <div class="row">
         <div class="col-sm">
           <b>'From'</b> label
-          <input id="from_label" class="form-control" type="text" placeholder="v1">
+          <input id="insert_from_label" class="form-control" type="text" placeholder="v1">
         </div>
         <div class="col-sm">
           <b>'To'</b> label
-          <input id="to_label" class="form-control" type="text" placeholder="v2">
+          <input id="insert_to_label" class="form-control" type="text" placeholder="v2">
         </div>
         <div class="col-sm">
           Edge label
-          <input class="form-control" type="text" placeholder="e1">
+          <input id="insert_edge_label" class="form-control" type="text" placeholder="e1">
         </div>
         <div class="col-sm">
           Edge type
-          <select class="form-control">
+          <select id="insert_edge_type" class="form-control">
             <option>dashed</option>
             <option>solid</option>
           </select>
         </div>
       </div>
       <div style="margin-top: 10px;">
-        <button type="button" class="btn btn-secondary">Insert an edge</button>
+        <button id="insert_button" type="button" class="btn btn-secondary">Insert an edge</button>
       </div>
     </div>
 
@@ -70,45 +74,34 @@
       <div class="row">
         <div class="col-sm">
           <b>'From'</b> label
-          <input class="form-control" type="text" placeholder="v1">
+          <input id="remove_from_label" class="form-control" type="text" placeholder="v1">
         </div>
         <div class="col-sm">
           <b>'To'</b> label
-          <input class="form-control" type="text" placeholder="v2">
+          <input id="remove_to_label" class="form-control" type="text" placeholder="v2">
         </div>
       </div>
       <div style="margin-top: 10px;">
-        <button type="button" class="btn btn-secondary">Remove an edge</button>
+        <button id="remove_button" type="button" class="btn btn-secondary">Remove an edge</button>
       </div>
     </div>
 
     <div style="margin-top: 50px;">
       <h5>Resulting graph</h5>
-      <img
+      <img id="result_graph"
         src="https://quickchart.io/graphviz?graph=digraph{main-%3Eparse-%3Eexecute;main-%3Einit;main-%3Ecleanup;execute-%3Emake_string;execute-%3Eprintf;init-%3Emake_string;main-%3Eprintf;execute-%3Ecompare;}"
-        class="img-fluid" alt="Responsive image">
+        class="img-fluid" alt="Graph image">
     </div>
-    
+
     <div style="margin-top: 50px;  margin-bottom: 50px;" class="col-sm">
       <h5>Current DOT-string</h5>
       <div class="form-group">
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <textarea id="result_dot_string" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
     </div>
   </div>
 
-  <!-- TODO: access graphviz API:
-    embed dot string into url
-        https://quickchart.io/graphviz?graph=digraph{main-%3Eparse-%3Eexecute;main-%3Einit;main-%3Ecleanup;execute-%3Emake_string;execute-%3Eprintf;init-%3Emake_string;main-%3Eprintf;execute-%3Ecompare;}&layout=fdp&format=png
-    or send HTTP-request
-      https://quickchart.io/documentation/graphviz-api/#api-parameters
-  -->
-  <!-- TODO: A port receives JSON.Decode.Value
-  -->
-  <!-- 
-    TODO: add text checks 
-    https://getbootstrap.com/docs/4.0/components/forms/#validation
-  -->
+  
 
 </body>
 
