--- a/src/index.html
+++ b/src/index.html
@@ -11,101 +11,157 @@
 </head>
 
 <body>
-  <!-- Elm app -->
-  <div id="myapp"></div>
-  <script>
-    var app = Elm.Main.init({
-      node: document.getElementById('myapp'),
-      flags: Date.now()
-    });
-  </script>
-
-  <!-- Container with light background -->
-  <div class="container bg-light" style="margin-top: 50px;">
+  <section>
+    <!-- Container with light background -->
+    <div class="container bg-light" style="margin-top: 50px;">
       <h1>
         Graph generator
       </h1>
       <p>
         Internally, uses DOT-strings, Elm, and API of quickchart.io
       </p>
-  </div>
+    </div>
 
-  <div class="container" style="margin-top: 50px;">
-    <h5>Notes</h5>
-    <ul>
-      <li>Please, provide <b>alphanumeric</b> values</li>
-      <li>Non-existing vertices will be added automatically</li>
-      <li>Press on the corresponding button to insert or remove an edge</li>
-      <li>Vertices in graph should be named uniquely
-    </ul>
-  </div>
+    <div class="container" style="margin-top: 50px;">
+      <h5>Notes</h5>
+      <ul>
+        <li>Please, provide <b>alphanumeric</b> values</li>
+        <li>Non-existing vertices will be added automatically</li>
+        <li>Press on the corresponding button to insert or remove an edge</li>
+        <li>Vertices in graph should be named uniquely
+      </ul>
+    </div>
 
-  <div class="container" style="margin-top: 50px;">
-    <div class="col-sm">
-      <div class="row">
-        <div class="col-sm">
-          <b>'From'</b> label
-          <input id="insert_from_label" class="form-control" type="text" placeholder="v1">
+    <div class="container" style="margin-top: 50px;">
+      <div class="col-sm">
+        <div class="row">
+          <div class="col-sm">
+            <h6>'From' label</h6>
+            <input id="insert_from_label" class="form-control" type="text" placeholder="v1">
+          </div>
+          <div class="col-sm">
+            <h6>'To' label</h6>
+            <input id="insert_to_label" class="form-control" type="text" placeholder="v2">
+          </div>
+          <div class="col-sm">
+            <h6>Edge label</h6>
+            <input id="insert_edge_label" class="form-control" type="text" placeholder="e1">
+          </div>
+          <div class="col-sm">
+            <h6>Edge type</h6>
+            <select id="insert_edge_type" class="form-control">
+              <option>dashed</option>
+              <option>solid</option>
+            </select>
+          </div>
         </div>
-        <div class="col-sm">
-          <b>'To'</b> label
-          <input id="insert_to_label" class="form-control" type="text" placeholder="v2">
+        <div style="margin-top: 10px;">
+          <button id="insert_button" type="button" class="btn btn-secondary" onclick="insert_button_clicked()">
+            Insert an edge</button>
         </div>
-        <div class="col-sm">
-          Edge label
-          <input id="insert_edge_label" class="form-control" type="text" placeholder="e1">
-        </div>
-        <div class="col-sm">
-          Edge type
-          <select id="insert_edge_type" class="form-control">
-            <option>dashed</option>
-            <option>solid</option>
-          </select>
-        </div>
-      </div>
-      <div style="margin-top: 10px;">
-        <button id="insert_button" type="button" class="btn btn-secondary">Insert an edge</button>
       </div>
     </div>
-  </div>
 
-  <div class="container" style="margin-top: 50px;">
-    <div class="col-sm">
-      <div class="row">
-        <div class="col-sm">
-          <b>'From'</b> label
-          <input id="remove_from_label" class="form-control" type="text" placeholder="v1">
+    <div class="container" style="margin-top: 50px;">
+      <div class="col-sm">
+        <div class="row">
+          <div class="col-sm">
+            <h6>'From' label</h6>
+            <input id="remove_from_label" class="form-control" type="text" placeholder="v1">
+          </div>
+          <div class="col-sm">
+            <h6>'To' label</h6>
+            <input id="remove_to_label" class="form-control" type="text" placeholder="v2">
+          </div>
         </div>
-        <div class="col-sm">
-          <b>'To'</b> label
-          <input id="remove_to_label" class="form-control" type="text" placeholder="v2">
+        <div style="margin-top: 10px;">
+          <button id="remove_button" type="button" class="btn btn-secondary" onclick="remove_button_clicked()">
+            Remove an edge
+          </button>
         </div>
       </div>
-      <div style="margin-top: 10px;">
-        <button id="remove_button" type="button" class="btn btn-secondary">Remove an edge</button>
+    </div>
+
+    <div class="container" style="margin-top: 50px;">
+      <div style="margin-top: 50px;">
+        <h5>Resulting graph</h5>
+        <!-- Just a place that is nearest to the main goal - url updates -->
+        <div id="__app__"></div>
+
+        <img id="result_graph"
+          src="https://quickchart.io/graphviz?graph=digraph{main-%3Eparse-%3Eexecute;main-%3Einit;main-%3Ecleanup;execute-%3Emake_string;execute-%3Eprintf;init-%3Emake_string;main-%3Eprintf;execute-%3Ecompare;}"
+          class="img-fluid" alt="Graph image">
       </div>
     </div>
-  </div>
 
-  <div class="container" style="margin-top: 50px;">
-    <div style="margin-top: 50px;">
-      <h5>Resulting graph</h5>
-      <img id="result_graph"
-        src="https://quickchart.io/graphviz?graph=digraph{main-%3Eparse-%3Eexecute;main-%3Einit;main-%3Ecleanup;execute-%3Emake_string;execute-%3Eprintf;init-%3Emake_string;main-%3Eprintf;execute-%3Ecompare;}"
-        class="img-fluid" alt="Graph image">
-    </div>
-  </div>
-
-  <div class="container" style="margin-top: 50px;  margin-bottom: 50px;" >
-    <div class="col-sm">
-      <h5>Current DOT-string</h5>
-      <div class="form-group">
-        <textarea id="result_dot_string" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <div class="container" style="margin-top: 50px;  margin-bottom: 50px;">
+      <div class="col-sm">
+        <h5>Current DOT-string</h5>
+        <div class="form-group">
+          <textarea id="result_dot_string" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <script>
+    /* extract query parameters from the URL */
+    const params = new URLSearchParams(window.location.search);
 
+    /* set up Elm application */
+    var app = Elm.Main.init({
+      node: document.getElementById('__app__')
+    });
 
+    // Handle insert edge
+    function insert_button_clicked() {
+      // read inputs
+      let from = document.getElementById('insert_from_label');
+      let to = document.getElementById('insert_to_label');
+      let edge = document.getElementById('insert_edge_label');
+      let type = document.getElementById('insert_edge_label');
+
+      // put them into json
+      let edge = {
+        from: from,
+        to: to,
+        edge: edge,
+        type: type
+      };
+
+      let edge_json = JSON.stringify(edge);
+
+      // send json to elm
+      app.ports.insertEdge.send(edge_json);
+    }
+
+    function remove_button_clicked(){
+      // read inputs
+      let from = document.getElementById('remove_from_label');
+      let to = document.getElementById('remove_to_label');
+
+      // put them into json
+      let edge = {
+        from: from,
+        to: to
+      };
+
+      let edge_json = JSON.stringify(edge);
+
+      // send json to elm
+      app.ports.removeEdge.send(edge_json);
+    }
+
+    function switch_mode() {
+      var toggler;
+      toggler = document.getElementById('toggler');
+      if (toggler.checked) {
+        app.ports.switchMode.send(1);
+      }
+      else {
+        app.ports.switchMode.send(0);
+      }
+    }
+  </script>
 
 </body>
 
