--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <title>Main</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="Main.js"></script>
 </head>
 
 <body>
@@ -104,7 +106,7 @@
       </div>
     </div>
   </section>
-  <script>
+  <script type="text/javascript">
     /* extract query parameters from the URL */
     const params = new URLSearchParams(window.location.search);
 
@@ -154,9 +156,10 @@
     }
 
     // handle graph image updates
-    app.ports.updateGraph.subscribe(function(url_json){
-      let url_obj = JSON.parse(url_json);
-      document.getElementById("result_graph_image").src=url_obj.url;
+    app.ports.updateGraph.subscribe(function(url_obj){
+      let url = encodeURI(url_obj.url);
+      console.log(url);
+      document.getElementById("result_graph_image").src=url;
     })
 
   </script>
