add default graph

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <div id="__app__"></div>
 
         <img id="result_graph_image"
-          src="https://quickchart.io/graphviz?graph=digraph{main-%3Eparse-%3Eexecute;main-%3Einit;main-%3Ecleanup;execute-%3Emake_string;execute-%3Eprintf;init-%3Emake_string;main-%3Eprintf;execute-%3Ecompare;}"
+          src="https://quickchart.io/graphviz?graph=digraph%20G%20%7Bsome-%3E%22graph%22%5Blabel=%22%20%20default%22,%20style=%22dashed%22%5D;%7D"
           class="img-fluid" alt="Graph image">
       </div>
     </div>
