--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="Main.js"></script>
+  <script type="text/javascript" src="Main.js"></script>
 </head>
 
 <body>
@@ -101,7 +102,7 @@
       <div class="col-sm">
         <h5>Current DOT-string</h5>
         <div class="form-group">
-          <textarea id="result_dot_string" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea id="result_dot_string" class="form-control" id="exampleFormControlTextarea1" rows="3" spellcheck="false"></textarea>
         </div>
       </div>
     </div>
@@ -152,9 +153,13 @@
     }
 
     // handle graph image updates
-    app.ports.updateGraph.subscribe(function(url_obj){
-      let url = encodeURI(url_obj.url);
+    app.ports.updateGraph.subscribe(function(json){
+      let dot_graph = json.dot;
+      let url = "https://quickchart.io/graphviz?graph=" + encodeURI(dot_graph);
+      // set picture
       document.getElementById("result_graph_image").src=url;
+      // set DOT-string
+      document.getElementById("result_dot_string").value=dot_graph;
     })
 
   </script>
