--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <!-- Container with light background -->
     <div class="container bg-light" style="margin-top: 50px;">
       <h1>
-        Graph generator
+        Graph editor
       </h1>
       <p>
         Internally, uses DOT-strings, Elm, and API of quickchart.io
