fix column size

--- a/src/index.html
+++ b/src/index.html
@@ -39,19 +39,19 @@
     <div class="container" style="margin-top: 50px;">
       <div class="col-sm">
         <div class="row">
-          <div class="col-sm">
+          <div class="col">
             <h6>'From' label</h6>
             <input id="insert_from_label" class="form-control" type="text" placeholder="v1">
           </div>
-          <div class="col-sm">
+          <div class="col">
             <h6>'To' label</h6>
             <input id="insert_to_label" class="form-control" type="text" placeholder="v2">
           </div>
-          <div class="col-sm">
+          <div class="col">
             <h6>Edge label</h6>
             <input id="insert_edge_label" class="form-control" type="text" placeholder="e1">
           </div>
-          <div class="col-sm">
+          <div class="col">
             <h6>Edge type</h6>
             <select id="insert_edge_type" class="form-control">
               <option>dashed</option>
@@ -69,11 +69,11 @@
     <div class="container" style="margin-top: 50px;">
       <div class="col-sm">
         <div class="row">
-          <div class="col-sm">
+          <div class="col">
             <h6>'From' label</h6>
             <input id="remove_from_label" class="form-control" type="text" placeholder="v1">
           </div>
-          <div class="col-sm">
+          <div class="col">
             <h6>'To' label</h6>
             <input id="remove_to_label" class="form-control" type="text" placeholder="v2">
           </div>
